+current_dir +bugfix echo_to_list +echo package +print package +refactoring EpeExec +bug echo, vedere quando fare il trim " 	+echo("\"a\""); fa 2 echo -> a 	+print -> "a" +bugfix exec: ProcessBuilder instead of Runtime.getRuntime() +print_mem_guessing